# Voxelith

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  VOXEL_EDITOR_DESIGN.md  vcpkg.json
src/: camera.cpp  camera.h  input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  vma_impl.cpp
src/editor/: CMakeLists.txt  editor_state.cpp  editor_state.h  menu_bar.cpp  menu_bar.h  palette_panel.cpp  palette_panel.h
src/vk/: vk_context.cpp  vk_context.h  vk_frame_sync.cpp  vk_frame_sync.h  vk_imgui.cpp  vk_imgui.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_swapchain.cpp  vk_swapchain.h
src/voxel/: CMakeLists.txt  chunk.h  material.h  model.h  naive_mesher.cpp  naive_mesher.h  palette.h  vox_import.cpp  vox_import.h  voxel_types.cpp  voxel_types.h  vxm_io.cpp  vxm_io.h
test_data/: White Mansion.vox
